# docgate

./: .gitignore  Dockerfile  README.md  README.zh.md  docker-compose.yml  pyproject.toml  ruff.toml  run_dev_all.sh  setup.py
.cspell/: custom-dictionary-workspace.txt
.github/: FUNDING.yml
.github/workflows/: release-update-vps.yml
alembic/: env.py
alembic/versions/: 2791b3244d6e_.py  ddec103ed03f_.py  f77693646591_.py
backend/: README.md  pyproject.toml  run_dev.sh
backend/alembic/versions/: ddec103ed03f_.py
backend/scripts/: add_admin_role.py  create_dashboard_user.sh  delete_users.py  dev_run_cmd  dummy_syslog_receiver.py
backend/scripts/db-related/: alembic_run.sh
backend/scripts/quick-tests/: smtp-send.py  test_async_db.py
backend/src/docgate/: app.py  config.py  jwt_verification.py  log_builder.py  logics_test.py  models.py  repositories.py  route_stat.py  run_dev.sh  supertokens_config.py  supertokens_utils.py  utils.py
backend/src/docgate/asserts/: purchase_confirmation.html
confgen/: README.md  cli.py  data_types.py  gen.py  nginx_conf_gen.py  pyproject.toml
confgen/src/docgate_confgen/: data_types.py  gen.py  nginx_conf_gen.py
confgen/src/docgate_confgen/unified_conf/example/: conf.py
confgen/uni-conf/example/: conf.py
deploy/: .gitignore  README.md  env_init.sh  gunicorn.conf.py  project_init.sh  project_init_and_update.sh  update.sh  utils.sh
dev-log/: README.md  alembic_migrate_db.md  invite-code-binding-guide.md  log.md
docgate/: app.py  config.py  exceptions.py  jwt_verification.py  log_builder.py  logics.py  logics_test.py  models.py  repositories.py  route_stat.py  routes.py  routes_stripe.py  run.sh  run_dev.sh  supertokens_config.py  supertokens_utils.py  utils.py
docgate/asserts/: __init__.py
docgate/config/: dev.py
docgate/core/: auth.py
docgate/scripts/: add_admin_role.py  add_admin_role_example.sh  create_dashboard_user.sh  delete_users.py  dummy_syslog_receiver.py  init_db.sh  stripe_listen.sh
docgate/scripts/db-related/: alembic_run.sh
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.css  App.tsx  config.tsx  main.tsx  routes.ts
frontend/src/app/dashboard/: index.tsx
frontend/src/app/go-docs/: index.tsx
frontend/src/app/home/: index.tsx
frontend/src/app/jump-out-spa/: index.tsx
frontend/src/app/manage/: CopyField.tsx  CreatePasswordResetLinkCard.tsx  GenPrepaidCodeCard.tsx  ManuallyVerifyEmailCard.tsx  index.tsx  useCreatePasswordResetLink.ts  useGenInviteCode.ts  useGenPrepaidCode.ts  useManuallyVerifyEmail.ts
frontend/src/app/not-found-page/: index.tsx
frontend/src/app/purchase/: index.tsx
frontend/src/app/stripe/: StripeContextLayout.tsx  checkout.tsx  return.tsx  routes.tsx
frontend/src/assets/images/: index.ts
frontend/src/component/: Banner.tsx  contentPageLayout.tsx
frontend/src/component/nav/: TopNav.tsx
frontend/src/supertokens/: RouteAuth.tsx  emailPasswordUi.zh.ts  init.ts  url.ts
frontend/src/types/: global.d.ts
frontend/src/utils/: api.ts  basic.ts  frontendHooks.ts
nginx/: .gitignore  README.md  default.conf  dev.conf  prod.conf
