[project]
name = "docgate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.128.0",
    "python-dotenv>=1.2.1",
    "sniffio>=1.3.1", # required by supertokens-python, but not in their dependency
    "supertokens-python>=0.30.2",
]

[tool.ruff]
line-length = 120
indent-width = 2
