[project]
name = "docgate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.128.0",
    "python-dotenv>=1.2.1",
    "sniffio>=1.3.1", # required by supertokens-python, but not in their dependency
    "sqlalchemy>=2.0.45",
    "supertokens-python>=0.30.2",
]

[tool.ruff]
line-length = 120
indent-width = 2

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["docgate"]