[project]
name = "docgate-confgen"
version = "1.1.0"
description = "A unified config-gen script to generate config/env for each modules."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fs-pyutils>=1.1.1",
    "pydantic>=2.12.5",
]

[project.scripts]
gen = "gen:main"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.uv.sources]
fs-pyutils = { git = "https://github.com/fseasy/fs-pyutils.git" }

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.lint]
# 确保 "I" (isort) 规则在启用列表中
select = ["E", "F", "B", "UP", "I", "RET"]

[tool.ruff.lint.isort]
# 这里可以像 isort 一样自定义配置
force-single-line = false # 是否强制单行导入
combine-as-imports = true # 是否合并 import as
